kubernetes.yml
apiVersion: v1
kind: Namespace
metadata:
  name: spent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spent-webapp
  namespace: spent
  labels:
    app: spent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spent
  template:
    metadata:
      labels:
        app: spent
    spec:
      containers:
        - name: spent
          image: ${IMG}
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spent-webapp-service
  namespace: spent
  labels:
    app: spent
spec:
  type: NodePort
  selector:
    app: spent
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: spent
  name: spent-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: spent-ip
spec:
  rules:
    - host: spent.plaumann.ca
      http:
        paths:
          - backend:
              serviceName: spent-webapp
              servicePort: 8080
